--- a/Oxford Brookes Bus/Info.plist
+++ b/Oxford Brookes Bus/Info.plist
@@ -2,18 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Add User Location</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>May we use your location for the busses</string>
-	<key>CFBundleDisplayName</key>
-	<string>OBU Transit</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>OBU Transit</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.apple.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.ajn.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -28,6 +24,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Add User Location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>May we use your location for the busses</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
